--- a/src/game/SConscript
+++ b/src/game/SConscript
@@ -1,5 +1,7 @@
 Import('env')
 env = env.Clone()
 
+env.AppendUnique(CPPPATH=['#src/runrunrun'])
+
 lib = env.SharedLibrary('game', Glob('*.cpp'))
 env.Install('#install', lib)
