--- a/src/rrr/SConscript
+++ b/src/rrr/SConscript
@@ -1,7 +1,8 @@
 Import('env')
 env = env.Clone()
 
+env.AppendUnique(CPPPATH=['#src/ngn'])
 env.ParseConfig('pkg-config --cflags --libs glfw3')
 
-cmd = env.Program('runrunrun', Glob('*.cpp'))
+cmd = env.Program('rrr', Glob('*.cpp'), LIBS=['ngn'], LIBPATH=['#install'])
 env.Install('#install', cmd)
