--- a/src/tests/SConscript
+++ b/src/tests/SConscript
@@ -3,7 +3,7 @@ import sys
 Import('env')
 env = env.Clone()
 
-env.AppendUnique(CPPPATH=['#src/ngn'])
+env.AppendUnique(CPPPATH=['#src/ngn','#libs/glm'])
 env.ParseConfig('pkg-config --cflags --libs glfw3')
 
 # Set up rpath on Linux so we can find the shared libraries.
